@@ -1,3 +1,9 @@
+2013-03-08  Karl Berry  <karl@gnu.org>
+
+	* util/gendocs.sh: omit --split=node for the sake of pre-5.0
+	installations.  Report to bug-gnulib from Martin von Gagern,
+	08 Mar 2013 19:20:36.
+
 2013-03-05  Patrice Dumas  <pertusus@free.fr>
 
 	* tp/Texinfo/Parser.pm (_close_current): close correctly stacks when
